// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiStepHorizontal is rendered 1`] = `
<li
  aria-label="aria-label"
  class="euiStepHorizontal testClass1 testClass2 euiStepHorizontal-isIncomplete"
  data-test-subj="test subject string"
  title="Step 1 is complete"
>
  <button>
    <div
      class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 1 is incomplete
      </p>
      <p
        aria-hidden="true"
      >
        1
      </p>
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  />
</li>
`;

exports[`EuiStepHorizontal props isComplete 1`] = `
<li
  class="euiStepHorizontal euiStepHorizontal-isComplete"
  title="Step 1 is complete"
>
  <button>
    <div
      class="euiStepNumber euiStepNumber--complete euiStepHorizontal__number"
    >
      <span
        aria-label="Step 1 is complete"
        class="euiStepNumber__icon"
        data-euiicon-type="check"
      />
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  />
</li>
`;

exports[`EuiStepHorizontal props isSelected 1`] = `
<li
  aria-current="step"
  class="euiStepHorizontal euiStepHorizontal-isSelected"
  title="Step 1"
>
  <button>
    <div
      class="euiStepNumber euiStepHorizontal__number"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 1
      </p>
      <p
        aria-hidden="true"
      >
        1
      </p>
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  />
</li>
`;

exports[`EuiStepHorizontal props status complete is rendered 1`] = `
<li
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 1 is complete"
>
  <button>
    <div
      class="euiStepNumber euiStepNumber--complete euiStepHorizontal__number"
    >
      <span
        aria-label="Step 1 is complete"
        class="euiStepNumber__icon"
        data-euiicon-type="check"
      />
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  />
</li>
`;

exports[`EuiStepHorizontal props status danger is rendered 1`] = `
<li
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 1"
>
  <button>
    <div
      class="euiStepNumber euiStepNumber--danger euiStepHorizontal__number"
    >
      <span
        aria-label="Step 1 has errors"
        class="euiStepNumber__icon"
        data-euiicon-type="cross"
      />
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  />
</li>
`;

exports[`EuiStepHorizontal props status disabled is rendered 1`] = `
<li
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 1 is disabled"
>
  <button>
    <div
      class="euiStepNumber euiStepNumber--disabled euiStepHorizontal__number"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 1 is disabled
      </p>
      <p
        aria-hidden="true"
      >
        1
      </p>
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  />
</li>
`;

exports[`EuiStepHorizontal props status incomplete is rendered 1`] = `
<li
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 1 is complete"
>
  <button>
    <div
      class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 1 is incomplete
      </p>
      <p
        aria-hidden="true"
      >
        1
      </p>
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  />
</li>
`;

exports[`EuiStepHorizontal props status warning is rendered 1`] = `
<li
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 1"
>
  <button>
    <div
      class="euiStepNumber euiStepNumber--warning euiStepHorizontal__number"
    >
      <span
        aria-label="Step 1 has warnings"
        class="euiStepNumber__icon"
        data-euiicon-type="alert"
      />
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  />
</li>
`;

exports[`EuiStepHorizontal props step 1`] = `
<li
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 5 is complete"
>
  <button>
    <div
      class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 5 is incomplete
      </p>
      <p
        aria-hidden="true"
      >
        5
      </p>
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  />
</li>
`;

exports[`EuiStepHorizontal props title 1`] = `
<li
  class="euiStepHorizontal euiStepHorizontal-isIncomplete"
  title="Step 1 is complete"
>
  <button>
    <div
      class="euiStepNumber euiStepNumber--incomplete euiStepHorizontal__number"
    >
      <p
        class="euiScreenReaderOnly"
      >
        Step 1 is incomplete
      </p>
      <p
        aria-hidden="true"
      >
        1
      </p>
    </div>
  </button>
  <p
    class="euiStepHorizontal__title"
  >
    First step
  </p>
</li>
`;
